# tree-sitter-cpp2

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  TODO.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  scanner.c  setup.py  test.cpp2  test_on_cpp2_files.sh  test_result.txt  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-cpp2.h  tree-sitter-cpp2.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cpp2/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
help/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
help/bindings/c/: tree-sitter-help.h  tree-sitter-help.pc.in
help/bindings/go/: binding.go  binding_test.go  go.mod
help/bindings/node/: binding.cc
help/bindings/python/tree_sitter_help/: __init__.py  binding.c
help/bindings/rust/: build.rs  lib.rs
help/src/: grammar.json  parser.c
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: contracts.txt  control_flow.txt  functions.txt  inheritance.txt  namespaces.txt  operators.txt  short_functions.txt  template_precedence.txt  test_part2.txt  test_part3.txt  test_part4.txt  test_part5.txt  test_part6.txt  tuples.txt
